@@ -1,8 +1,11 @@
 AUX tanglet-1.2.1-datadir.patch 500 SHA256 bf6867e9ced278315eb838dead6625bfe39f465e1f6099ce7a2cf177155e9745 SHA512 d58bad8707636c7b6995607bef6c8b5996edbf2b357eff1078bd19cc1aa9c4dc0340f37c0a9d632ec088334a93140a1be901a91bca0ce693124c56cc4476ac17 WHIRLPOOL ea0541aab3008f692fef5444a992c76349b242b99cdcf4ffb388df4c432f6d1a6554525703f2cd41a479468e284c6193fb9e80183c48adcc1c71843ef32edcf7
-AUX tanglet-1.2.2-datadir.patch 876 SHA256 cd9a8cc0f09a6be9329cb1a71615cc049421c544422973ca3f60131a17c3135b SHA512 8250ab883fadc42ad3be123368f749de24ee1f281910548bcc9149e486dd15dea9e21ce51c36f48957c9f6b16583ae56f39eb1547703c54c8cb5e4c0de5d790a WHIRLPOOL cdcfe7b55013fd00eff976371a27cc93c2fb53a452ef2b9b3474266b387727322b241914cb6f6814cd14546031d7f2a289728e2db70a41386a284c7a7da28b98
+AUX tanglet-1.2.2-datadir.patch 732 SHA256 58136f0cc97f0cd16c43443c15ec6cc268f6a9eb50c1e7bb3c8e39fd5f7c1f19 SHA512 35442f4b9bfe344c7168048ccd7d0742319b6ab3078d9df13fe66455d45b31a5bb01f7e4ad05b4ba25c83046bfe1428f6a2271231130c433ceac1b18fd405414 WHIRLPOOL c083764d1401ee11b18f70e8d464980b99dfbb1c544eb15ea2220509de61c1e9e0046d0b9337efd8d47b8642348a071f2ac8da33563d53038d73bb7611365f54
+AUX tanglet-1.3.1-datadir.patch 732 SHA256 58136f0cc97f0cd16c43443c15ec6cc268f6a9eb50c1e7bb3c8e39fd5f7c1f19 SHA512 35442f4b9bfe344c7168048ccd7d0742319b6ab3078d9df13fe66455d45b31a5bb01f7e4ad05b4ba25c83046bfe1428f6a2271231130c433ceac1b18fd405414 WHIRLPOOL c083764d1401ee11b18f70e8d464980b99dfbb1c544eb15ea2220509de61c1e9e0046d0b9337efd8d47b8642348a071f2ac8da33563d53038d73bb7611365f54
 DIST tanglet-1.2.1-src.tar.bz2 7814483 SHA256 94f4c5c76020ec1fe502ff076fbe5471e497d4b7bcabd1e9059e1022d1ce80c8 SHA512 25cb7d5f3884e32298562ca3c9655e4386f07a03911f436253d249d741f2ffad10646c3d37370da56e749b36e8926b3543e6f5f7ae560550a1c1efaf254fb121 WHIRLPOOL 71228788ef49538abca37ff54ff19d11806ba9d4f485bb9707402d635cc8089aa118653995d58dd4c2186fd72f6de96eaf86159fb9061777f0d9968a44df1a72
 DIST tanglet-1.2.2-src.tar.bz2 8102968 SHA256 c90d5c36b7e6cca54cdc001c7eecfb333795add16e6ae01f100026c61f4a84da SHA512 bf990a802d96f1c1c8a108696b9a46c223fa126a4415227ef200a14c3cdb80c7e9574785c02e3711b002a8daef2c4aff575ab323b6b2f41359f88f9adf5b5765 WHIRLPOOL a5ef1f3a17f56a4e5c0c00db1332a7898422d29b33dcb66237c177a4fd625e9377b2f0148a0486dcd76612daec9ee820c3eed5a9a021c92449bb8b1be850c493
+DIST tanglet-1.3.1-src.tar.bz2 8461603 SHA256 d0eab174eaa8cdd5f3499ae275db4cd720172ef28346273db7f5988f2304e0d8 SHA512 b939ca45f26baf8e7e32da8775e673707472e5cd07d344642eeb15986ff99319e0ab1bacf78e2ea49f004ec67a6d081a91c939cf7c75228a195654d429235625 WHIRLPOOL e2ee97327b95b502b603c953c4b42636fd060f8476bd0787f4d7527c9ebf04774868bd0f923f5b7e89e24e4123143b87e8d9859087685fd62d83c46da26b145d
 EBUILD tanglet-1.2.1.ebuild 1130 SHA256 f69529afc1b2ee29845fb21c7eb519da0535e98ae8eb7cdf711e598fb521f265 SHA512 45362e113182908e8a20a710be759bb891bacea1ae4c0c7c15e255f38520f04bd61893ff7cacb5f6f8709f89560b470ba731b36ce844aba13833cab20a30bb6a WHIRLPOOL 9e763b1576b9d9a81c3abd9aa82d8a6e9ba092d3aecc0dc1093aadad5fbdf5a0db0fe806fdb4a1f208a92379ecf17666bc9c1371c68339a33f1125e02e631da8
-EBUILD tanglet-1.2.2.ebuild 1444 SHA256 181b3a80b2a863e8b5da69fa6db192b6964699435e40501efe92e8baba969b26 SHA512 30194533c9d74e4b8adcd229e3bc3621b2edf3bb799040c1734d07ba10e0198cf8297035d28600cdc1424681d8031bbc22210cab24e4fe29e69f4cb3e3251d84 WHIRLPOOL c5f319cbd953b50f4477cb6e9c2a15748a91880b97f4ace80abeecdf5949366bbff26acd77b87e59a17201f6c9e1267fd47c26bf440fd69ac3310806370b41b9
-MISC ChangeLog 2722 SHA256 7271e9b483942dfe4189e3ee4b8b7f82378e28fe5d2ee57fb8242923dedd4db1 SHA512 36a6fb991a0032af7312b6b6e379fbc40fec073c2931e6c0b19c8356229446902693ded0a647a63226d8c9371322a3f51c3a61842921733206a2a7a671e13d5f WHIRLPOOL 3776781376b3b5251a403e3ca4518039c6b2ad39351fb4a6d60bd406014f6c8fc8381a9d3e8ee8a3079a3a379e5a852ec669fb15e46931489beb69ce6c06cc1c
+EBUILD tanglet-1.2.2.ebuild 1444 SHA256 b9d2c60ac1c359659e6c85d84b3780f3345006f75a4276f33e616080ebefeebe SHA512 4fba665b4792853aefa3402369f2f9877d0e04dec68d591012412ae351d1ca9d657d16a842bbd8066e3064a65338e7ae7dc43cf8a4b901dc422df87e287ea430 WHIRLPOOL d231fe6945e5918269edec0c44e400afd1f32e008b89bdc0883ce87b9afc513bdf72ea6a5afbb2087ac2c18bf90ad8a2f14dc31d3843807f1f7bbc1c4408e885
+EBUILD tanglet-1.3.1.ebuild 1452 SHA256 5c6140283d694c4af968b285720a576da51bae69303d0aa7cd32a0e2631a6579 SHA512 295650c2c28360dc1a3dceb046160d0611107ca096b0d51038ed6002368dfdec0d23a5c8e80a09ed22e1f910b331dda04636d7d4f407bf531a43986371c5861f WHIRLPOOL c1df646b9ba625377d96bcccbc1a075f7076e20f67be29be2897cc6863460cac9ca7a788d186cb48a2d99e51a5ea72f9f43868c3523b188e1ac94f5d5b69710b
+MISC ChangeLog 2980 SHA256 5ffc2228febf92db7d017aced661e370ac5ce7b067ad6d4fc23802b9f5347e43 SHA512 d0d7ee41c55410eec003ca600f407ddecc29b5ff4f72e298b3a27ab62745b5817f9ea6c7db1ea0771439d05b0862ab8c8a1a157f65ba93e0f24a00759b66e7ea WHIRLPOOL 0b1bedf0bc783f134b03fbe7a1b4697825c371c128cf653a61e2a8ee34d1b370bc3bf3c016bc4a0e07e673ad64913e840afd9ded1b60dc739e68d4ffe4df9bee
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
