@@ -1,11 +1,11 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/tanglet/tanglet-1.2.2.ebuild,v 1.3 2015/02/11 05:25:07 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/tanglet/tanglet-1.3.1.ebuild,v 1.1 2015/02/11 05:25:07 mr_bones_ Exp $
 
 EAPI=5
 LANGS="cs de es en fr he hu it nl ro tr uk"
 LANGSLONG="es_CL"
-inherit eutils gnome2-utils qt4-r2 games
+inherit eutils gnome2-utils qmake-utils games
 
 DESCRIPTION="A single player word finding game based on Boggle"
 HOMEPAGE="http://gottcode.org/tanglet/"
@@ -17,19 +17,20 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND="sys-libs/zlib
-	dev-qt/qtcore:4
-	dev-qt/qtgui:4"
+	dev-qt/qtcore:5
+	dev-qt/qtgui:5"
 RDEPEND=${DEPEND}
 
 src_prepare() {
 	epatch "${FILESDIR}"/${P}-datadir.patch
-	sed -i -e "s:@GENTOO_DATADIR@:${GAMES_DATADIR}/${PN}:" \
+	sed -i \
+		-e "s:@GENTOO_DATADIR@:${GAMES_DATADIR}/${PN}:" \
 		src/locale_dialog.cpp \
 		src/main.cpp || die
 }
 
 src_configure() {
-	qt4-r2_src_configure
+	eqmake5 tanglet.pro
 }
 
 src_install() {
