@@ -10,4 +10,4 @@ RDEPEND=sys-libs/zlib dev-qt/qtcore:4 dev-qt/qtgui:4 games-misc/games-envd
 SLOT=0
 SRC_URI=http://gottcode.org/tanglet/tanglet-1.2.2-src.tar.bz2
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	9e0174de733aecba0a7e66b2b01841d2	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=94d682492bcafa3bd4ab5747466e766e
+_md5_=2e73f8178d1f6a0c2bd1891409ac2023
